# McRadar

./: .gitignore  README.md  pyproject.toml
examples/: calc_McRadar_output.py  dopplerVelocities_example.txt  forward_simulate_McSnow_casestudy.py  plotting_functions.py
src/mcradar/: __init__.py  attenuationOperator.py  fullRadarOperator.py  kdpOperator.py  settings.py  spectraOperator.py  tableOperator.py  utilities.py  zeOperator.py
src/mcradar.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/mcradar/mcradar.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tools/: convert_S_Z.py
